[package]
name = "cd_env"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Detect CD (deploy, deliver, distribute) information from the environment."
homepage = "https://github.com/milesj/rust-cicd-env"
repository = "https://github.com/milesj/rust-cicd-env"
keywords = ["cd", "deploy", "env", "info", "provider"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
